--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,11 @@ body {
 
 .toc-list li {
   list-style: none;
+  padding-left: 0;
+}
+
+.toc-list li::marker {
+  content: '';
 }
 
 @keyframes hero-sweep {
