--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,18 +60,18 @@ body {
 }
 
 .toc-list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
+  list-style: none !important;
+  padding-left: 0 !important;
+  margin: 0 !important;
 }
 
 .toc-list li {
-  list-style: none;
-  padding-left: 0;
+  list-style: none !important;
+  padding-left: 0 !important;
 }
 
 .toc-list li::marker {
-  content: '';
+  content: '' !important;
 }
 
 @keyframes hero-sweep {
